src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADU_Exp_Mwhs__c</fullName>
        <label>ADU Exp Mwhs</label>
        <summarizedField>LDC_Account__c.Acct_ADU__c</summarizedField>
        <summaryForeignKey>LDC_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Comments__c</fullName>
        <label>Account Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aggregator_Code__c</fullName>
        <label>Aggregator Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_MWh1__c</fullName>
        <description>Used by C&amp;I team for sum of acct annual usage of all ldc accounts</description>
        <label>Annual MWh</label>
        <summarizedField>LDC_Account__c.Acct_Annual_Usage__c</summarizedField>
        <summaryForeignKey>LDC_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_MWh2__c</fullName>
        <formula>Annual_MWh1__c/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual MWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_MwH__c</fullName>
        <label>Annual MWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Entity__c</fullName>
        <label>Billing Entity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Business Account for Person Account (Used for MuniAgg, MassMarket etc)</description>
        <inlineHelpText>Related Business Customer for Individual Customer (Used for MuniAgg, MassMarket etc)</inlineHelpText>
        <label>Business Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Mass_Market_Offer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Muni_Agg</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>BusinessAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp_Info_Comments__c</fullName>
        <label>Comp Info Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitive_End_Date__c</fullName>
        <label>Competitive End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracting_Entity__c</fullName>
        <label>Contracting Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DES</fullName>
                </value>
                <value>
                    <fullName>DES-EAST</fullName>
                </value>
                <value>
                    <fullName>Homefield Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Price_KWh__c</fullName>
        <label>Current Price ($/kWh)</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <label>Current  Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Block and Index</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                </value>
                <value>
                    <fullName>Pass Through</fullName>
                </value>
                <value>
                    <fullName>Percentage Energy</fullName>
                </value>
                <value>
                    <fullName>Percent Off SSO</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Tariff</fullName>
                </value>
                <value>
                    <fullName>HSS</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <label>Current Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AEP Retail</fullName>
                </value>
                <value>
                    <fullName>Atmos Energy</fullName>
                </value>
                <value>
                    <fullName>BP Canada Marketing</fullName>
                </value>
                <value>
                    <fullName>Capital Energy Ohio</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Chose Not To Participate</fullName>
                </value>
                <value>
                    <fullName>Cleveland Electric Illuminating</fullName>
                </value>
                <value>
                    <fullName>Columbia Gas</fullName>
                </value>
                <value>
                    <fullName>Columbus Southern Power</fullName>
                </value>
                <value>
                    <fullName>Constellation NewEnergy</fullName>
                </value>
                <value>
                    <fullName>Dayton Power and Light</fullName>
                </value>
                <value>
                    <fullName>Delta Energy</fullName>
                </value>
                <value>
                    <fullName>Demand Response Partners</fullName>
                </value>
                <value>
                    <fullName>Direct Energy Business, LLC</fullName>
                </value>
                <value>
                    <fullName>Dominion East</fullName>
                </value>
                <value>
                    <fullName>Dominion Retail, Inc.</fullName>
                </value>
                <value>
                    <fullName>DPL Resources</fullName>
                </value>
                <value>
                    <fullName>Duke Energy Ohio</fullName>
                </value>
                <value>
                    <fullName>EnergyConnect</fullName>
                </value>
                <value>
                    <fullName>Energy Curtailment Specialists</fullName>
                </value>
                <value>
                    <fullName>EnerNOC</fullName>
                </value>
                <value>
                    <fullName>Exelon Energy</fullName>
                </value>
                <value>
                    <fullName>FirstEnergy Solutions Corp.</fullName>
                </value>
                <value>
                    <fullName>Gexa Energy</fullName>
                </value>
                <value>
                    <fullName>Glacial Energy</fullName>
                </value>
                <value>
                    <fullName>Guttman Energy</fullName>
                </value>
                <value>
                    <fullName>Hess Corporation</fullName>
                </value>
                <value>
                    <fullName>IGS</fullName>
                </value>
                <value>
                    <fullName>Integrys Energy Services, Inc.</fullName>
                </value>
                <value>
                    <fullName>NextEra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPLC__c</fullName>
        <label>Customer PLC</label>
        <precision>17</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_PLC__c</fullName>
        <label>Customer PLC</label>
        <summarizedField>LDC_Account__c.Capacity_PLC1__c</summarizedField>
        <summaryForeignKey>LDC_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;I</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Muni-Agg</fullName>
                </value>
                <value>
                    <fullName>Mass-Market</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <inlineHelpText>Federal Tax Id Number</inlineHelpText>
        <label>FEIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Individual_Info__c</fullName>
        <label>LDC Individual Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_2__c</fullName>
        <label>Lead Source 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGE Benton Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Carbondale Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Carlinville Comm Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Carterville Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Effingham Area Businesses</fullName>
                </value>
                <value>
                    <fullName>AGEGreater Centralia Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Greater Salem Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Herrin Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE IOGA</fullName>
                </value>
                <value>
                    <fullName>AGE Jefferson County Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Lawrence County Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Marion Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Mount Vernon Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Muni-Agg Community</fullName>
                </value>
                <value>
                    <fullName>AGE Murphysboro Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Sesser Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Virden Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE West Frankfort Chamber</fullName>
                </value>
                <value>
                    <fullName>Barrington Chamber</fullName>
                </value>
                <value>
                    <fullName>CAIC (Calumet Area Ind Comm)</fullName>
                </value>
                <value>
                    <fullName>CBAI</fullName>
                </value>
                <value>
                    <fullName>Chicago Southland Chamber</fullName>
                </value>
                <value>
                    <fullName>Cincinnati Chamber</fullName>
                </value>
                <value>
                    <fullName>COPE</fullName>
                </value>
                <value>
                    <fullName>Cooperator</fullName>
                </value>
                <value>
                    <fullName>CQI Decatur</fullName>
                </value>
                <value>
                    <fullName>CQI Effingham</fullName>
                </value>
                <value>
                    <fullName>CQI McLean</fullName>
                </value>
                <value>
                    <fullName>CQI Peoria</fullName>
                </value>
                <value>
                    <fullName>DCES Bolingbrook Chamber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Affinity Group</fullName>
                </value>
                <value>
                    <fullName>Call Center Referral</fullName>
                </value>
                <value>
                    <fullName>Chain</fullName>
                </value>
                <value>
                    <fullName>Chamber</fullName>
                </value>
                <value>
                    <fullName>DYN Website Form</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Trade Show/Event</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LodeStar_Integration_Status__c</fullName>
        <description>The Status of this record as it relates to LodeStar having the most up-to-date information.</description>
        <inlineHelpText>Indicates the data was sent to Lodestar, but does not confirm it was received successfully.  The field must be in &quot;Not Synchronized.&quot; See Document &quot;SF to LS Integration.docx&quot; for more details.</inlineHelpText>
        <label>LodeStar Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Synchronized</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Synchronized</fullName>
                </value>
                <value>
                    <fullName>Test Synchronized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_2__c</fullName>
        <description>This field is created during the iAve Conversion.</description>
        <label>Mailing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_3__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Mailing Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_website__c</fullName>
        <description>This field is created to store the Mailing website to address the iAve conversion gaps</description>
        <label>Mailing website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Muni_Agg_Type__c</fullName>
        <label>Muni Agg Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGG</fullName>
                </value>
                <value>
                    <fullName>GAG</fullName>
                </value>
                <value>
                    <fullName>GAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Muni_Agg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Muni Agg</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Muni_Agg</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NSPLC_Kw_Transaction__c</fullName>
        <label>NSPLC Kw Transaction</label>
        <summarizedField>LDC_Account__c.NSPL2_KW__c</summarizedField>
        <summaryForeignKey>LDC_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Peak_Summary__c</fullName>
        <label>On Peak  Summary</label>
        <summarizedField>LDC_Account__c.On_PK_Kwh__c</summarizedField>
        <summaryForeignKey>LDC_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PLC_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PLC Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Notes__c</fullName>
        <label>Return Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Validation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Name</fullName>
                </value>
                <value>
                    <fullName>Wrong Address</fullName>
                </value>
                <value>
                    <fullName>Name &gt; 39</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Associate1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created during the iAve Conversion gaps</description>
        <label>Sales Associate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created during the iAve Conversion</description>
        <label>Sales Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>This field is created to address iAve Conversion gaps</description>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Retail North</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Retail South</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_County__c</fullName>
        <description>This field is created during the iAve Conversion gaps</description>
        <label>Service County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County 2</fullName>
                </value>
                <value>
                    <fullName>ADAMS</fullName>
                </value>
                <value>
                    <fullName>ALEXANDER</fullName>
                </value>
                <value>
                    <fullName>BOND</fullName>
                </value>
                <value>
                    <fullName>BOONE</fullName>
                </value>
                <value>
                    <fullName>BROWN</fullName>
                </value>
                <value>
                    <fullName>BUREAU</fullName>
                </value>
                <value>
                    <fullName>CALHOUN</fullName>
                </value>
                <value>
                    <fullName>CARROLL</fullName>
                </value>
                <value>
                    <fullName>CASS</fullName>
                </value>
                <value>
                    <fullName>CHAMPAIGN</fullName>
                </value>
                <value>
                    <fullName>CHRISTIAN</fullName>
                </value>
                <value>
                    <fullName>CLARK</fullName>
                </value>
                <value>
                    <fullName>CLAY</fullName>
                </value>
                <value>
                    <fullName>CLINTON</fullName>
                </value>
                <value>
                    <fullName>COLES</fullName>
                </value>
                <value>
                    <fullName>COOK</fullName>
                </value>
                <value>
                    <fullName>CRAWFORD</fullName>
                </value>
                <value>
                    <fullName>CUMBERLAND</fullName>
                </value>
                <value>
                    <fullName>DEKALB</fullName>
                </value>
                <value>
                    <fullName>DEWITT</fullName>
                </value>
                <value>
                    <fullName>DOUGLAS</fullName>
                </value>
                <value>
                    <fullName>DUPAGE</fullName>
                </value>
                <value>
                    <fullName>EDGAR</fullName>
                </value>
                <value>
                    <fullName>EDWARDS</fullName>
                </value>
                <value>
                    <fullName>EFFINGHAM</fullName>
                </value>
                <value>
                    <fullName>FAYETTE</fullName>
                </value>
                <value>
                    <fullName>FORD</fullName>
                </value>
                <value>
                    <fullName>FRANKLIN</fullName>
                </value>
                <value>
                    <fullName>FULTON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <description>This field is created during the iAve conversion.</description>
        <label>Service State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IM</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <label>Short Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <description>This field is created to address the iAve conversion gaps</description>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Power Connect Member</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The legal retail entity selling to this customer (Dynegy Energy Services East, LLC)</inlineHelpText>
        <label>Operating Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tot_Priced_Mwh__c</fullName>
        <formula>(  On_Peak_Summary__c  +  off_Peak_Summary__c  )  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tot Priced Mwh</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trading_Partner_Name__c</fullName>
        <inlineHelpText>Field for MA to divide files on FTP Site</inlineHelpText>
        <label>Trading Partner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation__c</fullName>
        <label>Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>off_Peak_Summary__c</fullName>
        <label>off Peak Summary</label>
        <summarizedField>LDC_Account__c.Off_Pk_Kwh__c</summarizedField>
        <summaryForeignKey>LDC_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Supplier__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ABC</value>
        </filters>
        <label>Brokers</label>
    </listViews>
    <listViews>
        <fullName>C_I</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CnI</value>
        </filters>
        <label>C&amp;I</label>
    </listViews>
</CustomObject>